<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="653dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:gravity="center"
        android:text="@string/title_date"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/title_date"
        android:textAlignment="center"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="198dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_latitude"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_longitude"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/latitude"
            android:layout_width="198dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_latitude"
            android:textAlignment="center"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_longitude"
            android:textAlignment="center"
            android:textSize="19sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:text="@string/title_weather"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="199dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_day"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="19sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_night"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="19sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="91dp"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/dayWeather"
            android:layout_width="198dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_day"
            android:textAlignment="center"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/nightWeather"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_night"
            android:textAlignment="center"
            android:textSize="19sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:gravity="center"
        android:text="@string/title_temperarure"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="198dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_maximum"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="19sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_minimum"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="19sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/maxTemp"
            android:layout_width="198dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_maximum"
            android:textAlignment="center"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/minTemp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_minimum"
            android:textAlignment="center"
            android:textSize="19sp" />
    </LinearLayout>

</LinearLayout>